Wed Jul  5 13:12:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement OmDocumentTerm::get_description() and
	  OmDocumentContents::get_description()

Wed Jul  5 12:22:32 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More updates to the build system for java backends - the native
	  headers are now autogenerated
	
	* Added get_description() method to the OmQuery wrapper

	* Start of new Java test program

Wed Jul  5 11:43:29 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added danish stemming algorithm.

Wed Jul  5 11:33:00 BST 2000 Olly Betts

	* backends/database_builder.cc: backend list now in alphabetical
	  order; removed OM_ prefix from OM_DBTYPE_* (since they're now
	  internal to this file).

Wed Jul  5 11:10:56 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed incorrect test in apitest

Tue Jul  4 19:19:20 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added more debugging output for API calls.

Tue Jul  4 18:50:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added macros DEBUGAPICALL and DEBUGAPIRETURN for displaying
	  debugging messages tracing API calls.  Used for all appropriate
	  classes in omenquire.cc

Tue Jul  4 17:43:28 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More java makefile tweaks.

	* New test program for java bindings, which so far checks that it
	  can stem a word.

Tue Jul  4 16:58:08 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added comments to ensure that things are changed in sync in omstem.

	* Changed type of window parameter in OmQuery constructors to
	  (consistently) be om_termpos.

Tue Jul  4 15:56:35 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Nasty automakefile hackery to get java stuff to compile properly.

Tue Jul  4 12:16:36 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix OmStem::get_available_languages(), and test it.
